--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -43,9 +43,11 @@
             <div class="card-content"><span class="card-title" th:text="${participacaoEventoAtivos.evento.nome}" >Nome do Evento</span>
               <p th:text="|Organizador: ${participacaoEventoAtivos.pessoa.nome}|"></p>
               <p th:text="|Visibilidade: ${participacaoEventoAtivos.evento.visibilidade.visibilidade}|"></p>
+              
             </div>
             <div class="card-action">
-              <a th:href="@{/evento}" class="btn white-text waves-effect waves-light blue-grey">Inativar</a>
+              <a th:href="@{/evento}" >Inativar</a>
+              <a th:href="@{'/eventoOrganizador/trilhas/' + ${participacaoEventoAtivos.evento.id}}" class="btn white-text waves-effect waves-light blue-grey">Ver Trilhas</a>
             </div>
           </div>
          </div>
