--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -25,7 +25,7 @@
     </nav>
     <div class="container page"><br/>
       <div class="row opcoes">
-        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
+        <a th:href="@{/eventoOrganizador/ativos}" class="ativo">Eventos Ativos</a>
         <a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
         <a href="org_revisores.html">Revisores</a>
         <a href="org_trilhas.html">Trilhas</a>
