--- a/aplicacao/contest/src/main/resources/templates/autor/autor_index.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_index.html
@@ -5,18 +5,12 @@
 	content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Constest - Controle de Eventos de Submissão</title>
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <!-- CSS  -->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet" />
-<link
-	th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}"
-	type="text/css" rel="stylesheet" media="screen,projection" />
-<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}"
-	type="text/css" rel="stylesheet" />
-<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet"
-	media="screen,projection" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
+<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
 	<nav role="navigation" class="purple darken-4">
@@ -40,8 +34,8 @@
 		<div class="row opcoes">
 			<a th:href="@{/autor/participarEvento}" class="ativo">Eventos Ativos</a>
 			<a th:href="@{/autor/meusTrabalhos}">Meus Trabalhos</a>
-			<a href="../paginas_organizador/org_revisores.html">Revisores </a>
-			<a href="../paginas_organizador/org_trilhas.html">Trilhas </a>
+			<a href="#">Meus Eventos </a>
+			<a href="#">Revisores </a>
 		</div>
 		<div>
 			<div th:if="${eventoVazioError != null}" id="error_area" class="row chip red white-text" style="margin-right: 5px;margin-left: 5px;" th:text="${eventoVazioError}">
