--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -31,10 +31,16 @@
 	    <a href="#">Revisores </a>
       </div>
       <div>
-        <div th:if="${naoHaTrabalhos != null}" id="error_area" class="row chip red white-text" th:text="${naoHaTrabalhos}">
+        <div th:if="${naoHaTrabalhos}" id="error_area" class="row chip red white-text" th:text="#{NAO_HA_TRABALHOS}">
           <i class="material-icons">close</i>
         </div>
-        <div th:if="${eventoVazioError != null}" id="error_area" class="row chip red white-text" th:text="${eventoVazioError}">
+        <div th:if="${eventoVazioError}" id="error_area" class="row chip red white-text" th:text="#{ID_EVENTO_VAZIO_ERROR}">
+          <i class="material-icons">close</i>
+        </div>
+        <div th:if="${erroAoCadastrar}" id="error_area" class="row chip red white-text" th:text="#{ERRO_CADASTRO_TRABALHO}">
+          <i class="material-icons">close</i>
+        </div>
+        <div th:if="${sucessoEnviarTrabalho}" id="success_area" class="row chip green white-text" th:text="#{TRABALHO_ENVIADO}">
           <i class="material-icons">close</i>
         </div>
       </div>
