--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
@@ -104,11 +104,11 @@
       <div id="modalTrilha" class="modal">
         <div class="modal-content">
           <h4>Alterar nome da Trilha</h4>
-          <form th:action="@{/eventoOrganizador/trilha/editar}" action="#" th:object="${trilha}" method="POST">
+          <form th:action="@{/eventoOrganizador/editarTrilha}" th:object="${trilha}" method="POST">
             <div class="input-field col m6 s6">
-				<input type="hidden" th:value="${evento.id}" name = "eventoId"/>
-              	<input id="nome_da_trilha" th:field="*{nome}" name="nome" type="text" value = "${trilha.nome}"/>
-              	<input type="hidden" th:field="*{id}" th:value="${trilha.id}" name = "id"/>
+				<input id="nome_da_trilha" th:field="*{nome}" th:value="${trilha.nome}" name="nome" type="text" />
+	           	<input type="hidden" th:value="${trilha.id}" name = "id"/>
+	           	<input type="hidden" th:value="${trilha.evento.id}" name = "eventoId"/>
               <label for="nome_do_revisor">Nome da Trilha</label>
             </div>
           	 <div class="modal-footer">
