--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -14,12 +14,12 @@
     <nav role="navigation" class="purple darken-4">
       <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}"  alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
@@ -47,7 +47,7 @@
             </div>
             <div class="card-action">
               <a th:href="@{/evento}" >Inativar</a>
-              <a th:href="@{'/eventoOrganizador/trilhas/' + ${participacaoEventoAtivos.evento.id}}" class="btn white-text waves-effect waves-light blue-grey">Ver Trilhas</a>
+              <a th:href="@{'/eventoOrganizador/detalhes-evento/' + ${participacaoEventoAtivos.evento.id}}" class="btn white-text waves-effect waves-light blue-grey">Detalhes</a>
             </div>
           </div>
          </div>
