--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -17,12 +17,12 @@
          <img th:src="@{/img/logotipo_white.png}"  alt="Contest" width="200px"/>
        </a>
         <ul class="white-text right hide-on-med-and-down">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Link 01</a></li>
-          <li><a href="#">Link 02</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
